fix: replace hardcoded credentials with env vars for Railway deployment